Added some test coverage